overflow bug on carousel

--- a/src/Album/index.scss
+++ b/src/Album/index.scss
@@ -6,7 +6,6 @@ $cover-size: $spacing-300;
   flex-direction: column;
   min-width: $cover-size;
   max-width: $cover-size;
-  margin-top: 5px;
   min-height: $cover-size + $font-size-23 * 3;
   max-height: $cover-size + $font-size-23 * 3;
   text-align: center;
